<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#AED5B1">

    <!-- Header with "Item Detail" and Back Button -->

    <!-- Name Field -->

    <!-- Description Field -->


    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginBottom="636dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:text="Item Detail"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="41dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_home_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/headerTitle"
        app:layout_constraintStart_toStartOf="@+id/headerTitle"
        app:layout_constraintTop_toTopOf="@+id/headerTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Name"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionField"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Description"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <!-- Date and Model Fields in a row -->
    <EditText
        android:id="@+id/dateField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Date"
        android:inputType="date"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/modelField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionField" />

    <EditText
        android:id="@+id/modelField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Model"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateField"
        app:layout_constraintTop_toBottomOf="@+id/descriptionField" />

    <!-- Make and Value Fields in a row -->
    <EditText
        android:id="@+id/makeField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Make"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/valueField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateField" />

    <EditText
        android:id="@+id/valueField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Value"
        android:inputType="number"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/makeField"
        app:layout_constraintTop_toBottomOf="@+id/modelField" />

    <!-- Comment Field -->
    <EditText
        android:id="@+id/commentField"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Comment"
        android:gravity=""
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeField" />

    <!-- Serial Field -->
    <EditText
        android:id="@+id/serialField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Serial"
        android:inputType="number"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentField" />

    <!-- Tags Field -->
    <EditText
        android:id="@+id/tagsField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Tags"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serialField" />

    <!-- Add Photo Button -->
    <Button
        android:id="@+id/viewPhotoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Photo"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tagsField"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Confirm Button -->
    <Button
        android:id="@+id/editInfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Edit Info"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/viewPhotoBtn"
        tools:layout_editor_absoluteY="628dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
