...
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_edittext"
        android:padding="8dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addItemButton"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemGrid" />

    <ImageView
        android:id="@+id/addItemButton"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

    <Button
        android:id="@+id/select_text_cancel"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/Ash_Gray"
        android:gravity="center"
...
