...
    <!-- Cancel Button -->

    <!-- THESE THINGSA COOULD BE COOKED -->

    <!-- Save Button -->
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="Save"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
...
